# finansusya

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: tests.yml
app/: __main__.py  config.py  server.py
app/bot/: formatting.py  handlers.py
app/db/: models.py  repository.py
app/llm/: parser.py  qa.py
app/services/: csv_export.py  currency.py  notifications.py
notebooks/: user_pipeline.ipynb
tests/: conftest.py  test_config.py  test_csv_export.py  test_currency.py  test_formatting.py  test_handlers.py  test_models.py  test_notifications.py  test_parser.py  test_qa.py  test_repository.py  test_server.py
